14820
Using Scala version 2.8.0.r20087-b20091210111324 (OpenJDK 64-Bit Server VM, Java 1.6.0_0)

Given A.scala, B.scala:
{code}
object A {
  def x: List[Int] = List(3)
}
object B {
  val y: List[Int] = A.x
}
{code}

 1. Compile
 1. Modify A.scala to change the return type of x from List[Int] to List[String]
{code}
object A {
  def x: List[String] = List("3")
}
{code}
 1. Mark A.scala updated.  B is not recompiled because the build manager does not detect a type change in the return type.
 1. The expected error occurs when B.scala is explicitly marked as updated:
{code}
B.scala:2: error: type mismatch;
 found   : List[String]
 required: List[Int]
        val y: List[Int] = A.x
                             ^
{code}

It appears that types are being compared after erasure.  If this is true, fixing this might also fix SI-2650, SI-2651, SI-2652, SI-2653.
